--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.113",
     "@types/node": "^10.5.3",
+    "@types/sequelize": "^4.27.24",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
