--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "casbin": "^1.1.0",
+    "lodash": "^4.17.10",
+    "reflect-metadata": "^0.1.12",
     "sequelize": "^4.38.0",
-    "lodash": "^4.17.10"
+    "sequelize-typescript": "^0.6.6"
   },
   "files": [
     "lib",
