--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "husky": "^0.14.3",
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
+    "lodash": "^4.17.10",
+    "mysql2": "^1.6.1",
     "rimraf": "^2.6.2",
     "ts-jest": "22.4.6",
     "tslint": "^5.11.0",
@@ -28,7 +30,6 @@
   },
   "dependencies": {
     "casbin": "^1.1.0",
-    "lodash": "^4.17.10",
     "sequelize": "^4.38.0"
   },
   "files": [
