--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@types/lodash": "^4.14.113",
     "@types/node": "^10.5.3",
     "@types/sequelize": "^4.27.24",
+    "coveralls": "^3.0.2",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
+    "mysql2": "^1.6.1",
     "rimraf": "^2.6.2",
     "ts-jest": "22.4.6",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "coveralls": "^3.0.2"
+    "typescript": "^2.9.2"
   },
   "dependencies": {
     "casbin": "^1.1.0",
