--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "casbin-sequelize-adapter",
   "version": "1.0.0",
-  "description": "Sequelize adapter for Node-Casbin",
+  "description": "Sequelize adapter for Casbin",
   "main": "lib/adapter.js",
   "typings": "lib/adapter.d.ts",
   "scripts": {
