--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ node_js:
   - '8'
   - '6'
 
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+
+cache:
+  yarn: true
+
 script: echo "Running tests against $(node -v)..."
 
 jobs:
