--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ node_js:
   - '8'
   - '6'
 
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH=$HOME/.yarn/bin:$PATH
-
+install: yarn install
 cache:
   yarn: true
 
