--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ sudo: false
 node_js:
   - 'stable'
   - '8'
-  - '6'
 
 install: yarn install
 cache:
@@ -17,7 +16,10 @@ jobs:
   include:
   - stage: Produce Coverage
     node_js: node
-    script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+    script: jest --coverage --forceExit && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+
+before_install:
+  - mysql -e 'CREATE DATABASE casbin;'
 
 services:
   - mysql
