--- a/package.json
+++ b/package.json
@@ -10,29 +10,27 @@
     "build": "rimraf lib && tsc",
     "lint": "tslint \"src/**/*.ts\"",
     "fix": "tslint \"src/**/*.ts\" --fix",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/lodash": "^4.14.113",
+    "@types/jest": "^24.0.15",
     "@types/node": "^10.5.3",
-    "@types/sequelize": "^4.27.24",
+    "@types/sequelize": "^4.28.3",
     "coveralls": "^3.0.2",
     "husky": "^0.14.3",
-    "jest": "^24.1.0",
+    "jest": "^24.8.0",
     "lint-staged": "^7.2.0",
     "mysql2": "^1.6.1",
     "rimraf": "^2.6.2",
-    "ts-jest": "22.4.6",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.11.0",
     "typescript": "^3.3.3"
   },
   "dependencies": {
-    "casbin": "^2.0.0",
-    "lodash": "^4.17.10",
+    "casbin": "^3.0.1",
     "reflect-metadata": "^0.1.12",
-    "sequelize": "^4.42.0",
-    "sequelize-typescript": "^0.6.7"
+    "sequelize": "^5.8.10",
+    "sequelize-typescript": "^1.0.0-beta.3"
   },
   "files": [
     "lib",
