--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "build": "rimraf lib && tsc",
     "lint": "tslint \"src/**/*.ts\"",
     "fix": "tslint \"src/**/*.ts\" --fix",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "format": "yarn format:check --write",
+    "format:check": "prettier --check \"**/*.{md,json}\" \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^10.5.3",
-    "@types/sequelize": "^4.28.3",
-    "coveralls": "^3.0.2",
-    "husky": "^0.14.3",
-    "jest": "^24.8.0",
-    "lint-staged": "^7.2.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.11",
+    "@types/sequelize": "^4.28.9",
+    "coveralls": "^3.1.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.9",
     "mysql2": "^2.1.0",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.11.0",
-    "typescript": "^3.3.3"
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.0",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "casbin": "^3.0.1",
-    "reflect-metadata": "^0.1.12",
-    "sequelize": "^5.8.10",
-    "sequelize-typescript": "^1.0.0-beta.3"
+    "casbin": "^5.0.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.21.12",
+    "sequelize-typescript": "^1.1.0"
   },
   "files": [
     "lib",
