--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,7 @@ jobs:
         with:
           node-version: 12
       - uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql user: 'root'
       - run: mysql -e 'CREATE DATABASE casbin;'
-      - run: yarn install
+      - run: yarn
