--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: mysql -e 'CREATE DATABASE casbin;'
       - run: yarn
