--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,25 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: mysql -e 'CREATE DATABASE casbin;'
+      - run: mysql --host 127.0.0.1 --port 3306 -uroot -p -e "CREATE DATABASE casbin"
       - run: yarn
+      - name: Test
+        run: |
+          jest --coverage --forceExit
+          cat ./coverage/lcov.info
+          ./node_modules/coveralls/bin/coveralls.js
+      - name: Coveralls Parallel
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          parallel: true
+
+  finish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.github_token }}
+        parallel-finished: true
