--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Test
         run: |
           yarn run jest --coverage --forceExit
-          cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js
+          cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js --verbose
           rm -rf ./coverage
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
