--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.11",
+    "@types/node": "^14.14.37",
     "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "coveralls": "^3.1.0",
@@ -35,8 +36,8 @@
   "dependencies": {
     "casbin": "^5.0.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.12",
-    "sequelize-typescript": "^1.1.0"
+    "sequelize": "^6.6.2",
+    "sequelize-typescript": "^2.1.0"
   },
   "files": [
     "lib",
