--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,19 @@ jobs:
         with:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
+
+semantic-release:
+  needs: [ test ]
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v2
+
+    - name: Run semantic-release
+      if: github.repository == 'node-casbin/sequelize-adapter' && github.event_name == 'push'
+      run: |
+        yarn install --no-lockfile
+        yarn run prepack
+        yarn run release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
