Switch from travis-ci.org to GitHub Actions CI and setup semantic-release
Signed-off-by: Gabriel-403 <1499015923@qq.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.github_token }}
+      - name: Run Unit test
+        run: yarn run test
 
   finish:
     needs: build
