--- a/package.json
+++ b/package.json
@@ -1,101 +1,54 @@
 {
-  "name": "casbin-sequelize-adapter",
-  "version": "2.2.0",
-  "description": "Sequelize adapter for Casbin",
-  "main": "lib/adapter.js",
-  "typings": "lib/adapter.d.ts",
+  "name": "casbin.js",
+  "version": "0.1.3",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "repository": "https://github.com/casbin/casbin.js.git",
+  "author": "kingiw <kingiw@hotmail.com>",
+  "license": "Apache-2.0",
   "scripts": {
-    "precommit": "lint-staged",
-    "prepublish": "yarn run format:check && yarn run lint && yarn run test && yarn build",
+    "format": "prettier --write 'src/**/*.ts'",
+    "lint": "yarn eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "build": "rimraf lib && tsc",
-    "lint": "eslint --ext .ts src/ test/",
-    "test": "jest --forceExit",
-    "format": "yarn format:check --write",
-    "format:check": "prettier --check \"**/*.{md,json}\" \"{src,test}/**/*.ts\""
+    "test": "jest --config jestconfig.json --unhandled-rejections=strict",
+    "prod": "webpack --config webpack.prod.js",
+    "dev": "webpack --config webpack.dev.js",
+    "clean": "rimraf lib",
+    "prepack": "run-s build",
+    "postpack": "run-s clean",
+    "release": "npx -p semantic-release -p @semantic-release/git -p @semantic-release/changelog semantic-release"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.14.37",
-    "@types/sequelize": "^4.28.9",
-    "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "coveralls": "^3.1.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.9",
-    "mysql2": "^2.1.0",
-    "prettier": "^2.0.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/js-cookie": "^2.2.7",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^26.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.1.0",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.5"
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.2.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.3.5",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "casbin": "^5.0.3",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.2",
-    "sequelize-typescript": "^2.1.0"
-  },
-  "files": [
-    "lib",
-    "examples"
-  ],
-  "homepage": "https://casbin.org",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/node-casbin/sequelize-adapter.git"
-  },
-  "keywords": [
-    "casbin",
-    "node-casbin",
-    "adapter",
-    "sequelize",
-    "access-control",
-    "authorization",
-    "auth",
-    "authz",
-    "acl",
-    "rbac",
-    "abac",
-    "orm"
-  ],
-  "author": "Node-Casbin",
-  "licenses": [
-    {
-      "type": "Apache-2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    }
-  ],
-  "bugs": {
-    "url": "https://github.com/node-casbin/sequelize-adapter/issues"
-  },
-  "lint-staged": {
-    "*.{ts}": [
-      "tslint --fix",
-      "git add"
-    ]
-  },
-  "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
-  },
-  "jest": {
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "testMatch": [
-      "**/test/*.+(ts|tsx)"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "axios": "^0.21.1",
+    "babel-loader": ">=8.1.0",
+    "casbin": "^5.9.1",
+    "js-cookie": "^2.2.1"
   }
 }
