--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "reflect-metadata": "^0.1.13",
     "sequelize": "6.10.0",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-typescript": "2.1.2"
   },
   "files": [
     "lib",
