--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "yarn format:check --write",
     "format:check": "prettier --check \"{src,test}/**/*.ts\"",
     "prepack": "run-s lint build",
-    "release": "npx -p semantic-release -p @semantic-release/git -p @semantic-release/changelog semantic-release"
+    "release": "npx -p semantic-release -p @semantic-release/git -p @semantic-release/changelog semantic-release",
+    "postinstall": "yarn build"
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
