--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^14.14.37",
     "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "5.55.0",
+    "@typescript-eslint/parser": "5.55.0",
     "casbin": "<=5.9.0 || >5.9.1",
     "coveralls": "^3.1.0",
     "eslint": "^7.2.0",
